--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ GEMINI_API_KEY_1=AIzaSyCdvMDha90EvkQuf1ftC_XQLx_Jrnw_EhI
 GEMINI_API_KEY_2=AIzaSyAsCAySeCIk_glsjnOLI-bk9Xnxk6b626E
 GEMINI_API_KEY_3=AIzaSyB7zb6yyW8Vxy1PGN4pikpY5u91n9AvYJc
 GEMINI_API_KEY_4=AIzaSyBI6lgftwGfrsO3lngAqqKvZK0PBOkcRNc
+
+# Payment API Configuration
+PAYMENT_API_URL=http://localhost:8000/initiate_payment
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE=logs/invoice_system.log
