--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-pandas==1.5.3
-numpy==1.24.4
+pandas
+numpy
 pymupdf==1.23.22
-streamlit==1.28.1
-google-generativeai==0.4.1
+streamlit
+google-generativeai
 python-dotenv==1.0.1
-pytest==7.4.3
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
-huggingface-hub==0.14.1
+pytest
+tokenizers==0.19.1
+transformers==4.44.0
+sentence-transformers==3.0.1
+faiss-cpu
+huggingface-hub==0.24.5
 joblib==1.2.0
-pdfplumber==3.0.1
-googletrans==4.0.0-rc1
-transformers==4.30.2
+pdfplumber
+googletrans
 sentencepiece==0.2.0
-fastapi==0.104.1
-uvicorn==0.24.0
-secure-smtplib==0.1.1
-plotly==5.17.0
+fastapi
+uvicorn
+plotly
+secure-smtplib
 
 # LangGraph and LangChain dependencies
 langgraph==0.0.62
