--- a/requirements.txt
+++ b/requirements.txt
@@ -19,24 +19,23 @@ uvicorn
 plotly
 secure-smtplib
 
-# LangGraph and LangChain dependencies
-langgraph==0.0.62
-langchain==0.1.0
-langchain-core==0.1.0
-langchain-community==0.0.10
-langchain-google-genai==0.0.6
+# LangGraph and LangChain dependencies (compatible versions)
+langgraph==0.2.50
+langchain==0.3.7
+langchain-core==0.3.15
+langchain-community==0.3.5
+langchain-google-genai==2.0.5
 
 # Additional agentic AI dependencies
-pydantic==2.5.0
-typing-extensions==4.8.0
-asyncio==3.4.3
-aiohttp==3.9.1
-redis==5.0.1
-celery==5.3.4
+pydantic==2.9.2
+typing-extensions==4.12.2
+aiohttp==3.10.10
+redis==5.1.1
+celery==5.4.0
 
 # Fuzzy string matching for validation
 fuzzywuzzy==0.18.0
-python-Levenshtein==0.21.1
+python-Levenshtein==0.25.0
 
 # Additional utilities
-requests==2.31.0
+requests==2.32.3
